--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,8 +17,10 @@ environment:
   sdk: ">=2.2.2 <3.0.0"
 
 dependencies:
+  path_provider: ^1.6.0
+  sembast: ^2.1.3
   flutter:
-    sdk: flutter
+    sdk: flutter 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
