--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,16 +17,20 @@ environment:
   sdk: ">=2.2.2 <3.0.0"
 
 dependencies:
+  wave: ^0.0.8
+  google_fonts: ^0.3.9
+  lottie: ^0.2.2
   path_provider: ^1.6.0
   sembast: ^2.1.3
   flutter:
-    sdk: flutter 
+    sdk: flutter
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
 
 dev_dependencies:
+  intl: any
   flutter_test:
     sdk: flutter
 
@@ -43,9 +47,10 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #  - images/a_dot_burr.jpeg
-  #  - images/a_dot_ham.jpeg
+  assets:
+   - lottie/animation_list.json
+   - images/a_dot_burr.jpeg
+   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
