--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,9 @@ dependencies:
   lottie: ^0.2.2
   path_provider: ^1.6.0
   sembast: ^2.1.3
+  bottom_navy_bar: ^5.3.2
+  simple_animations: ^1.3.9
+
   flutter:
     sdk: flutter
 
@@ -49,8 +52,9 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
    - lottie/animation_list.json
-   - images/a_dot_burr.jpeg
-   - images/a_dot_ham.jpeg
+   - lottie/bag.json
+  #  - images/a_dot_burr.jpeg
+  #  - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
